# kchat-meeting

./: .dockerignore  Dockerfile  Dockerfile.txt  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: database.mdc  design-patterns.mdc  kchat-bot-api.mdc  project-structure.mdc  python-standards.mdc  survey-json-schema.mdc
alembic/: env.py
alembic/versions/: 39d35eed014f_add_permanent_invited_table.py  43aba459c0fd_initial.py  43f8fbde2bf0_add_statuses_in_invited.py  68f269cff21f_add_unique_constraint_users_sender_.py  b10_full_name_unified.py  b11_meeting_users_meeting_id.py  b12_merge_invited_meeting_users.py  b13_users_add_updated_at.py  b14_remove_invited_user_id.py  b15_invited_status_default.py  b2_add_meeting_vote_unique.py  b3_add_meetings_and_invited.py  b4_remove_goal_connection_link.py  b5_add_meeting_admins.py  b6_meeting_admins_email_fio.py  b7_meeting_admins_remove_meeting_id.py  b8_users_table_and_bigint.py  b9_remove_datetime_utc_is_active_login.py  (+1 more)
api/: __init__.py  users.py
config/: email_invitation.html  invited.example.json  invited.json  meeting.json  meeting_settings.yml  permanent_invited.txt
db/: __init__.py  models.py  session.py  user_repository.py
docs/: Bot-api.docx  README.md  REFACTORING_PLAN_HANDLER.md  python-version-migration.md  прглашенные.txt
libs/: messenger_bot_api-2.0.3-py3-none-any.whl  messenger_bot_api-2.0.5-py3-none-any.whl
modules/: __init__.py
tools/: admins.csv  bot_health_check.py  seed_meeting_admins.py  seed_permanent_invited.py
(+34 files in other folders)
