[project]
name = "kchat-meeting"
version = "1.0.0"
description = "Бот для проведения совещаний в KChat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "messenger-bot-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
messenger-bot-api = { path = "./libs/messenger_bot_api-2.0.3-py3-none-any.whl" }

[tool.hatch.build.targets.wheel]
packages = ["db", "modules"]
include = [
    "config.py",
    "main.py",
    "config/**/*.json",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
